fixed the footer image issue by using the antd icon, maybe a little too small

--- a/src/components/Layout/Footer.module.css
+++ b/src/components/Layout/Footer.module.css
@@ -1,13 +1,12 @@
 .footer {
-  padding-top: 180px;
+  padding-top: 90px;
   padding-bottom: 90px;
   background-color: rgb(4, 4, 114);
   text-align: center;
 }
 
 .image {
-    height: 10px;
-    width: 10px;
+    margin-bottom: 30px;
 }
 
 .link {
